# ocaml-sat

./: .gitignore  ReadMe.md  dune-project
lib/: cnf.ml  dpll.ml  monad.ml  types.ml
test/: dune
